--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.19">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.20">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -21,6 +21,7 @@
     <config-file target="AndroidManifest.xml" parent="/manifest">
       <uses-permission android:name="android.permission.BLUETOOTH"/>
       <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+      <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     </config-file>
   </platform>
   <!-- <platform name="ios">
