--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.34">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.35">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -24,7 +24,7 @@
       <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     </config-file>
   </platform>
-  <!--<platform name="ios">
+  <platform name="ios">
     <config-file target="config.xml" parent="/*">
       <feature name="GattServerPlugin">
         <param name="ios-package" value="GattServerPlugin" />
@@ -38,6 +38,6 @@
     <header-file src="src/ios/GattServerPlugin.h" />
     <source-file src="src/ios/GattServerPlugin.m" />
     <framework src="CoreBluetooth.framework" />
-  </platform>-->
+  </platform>
   <info>This plugin only adds Bluetooth LE GATT server with Immediate Alerts service added to your cordova app. To use your cordova app also as a GATT client, you need to use a 3rd party plugin for that</info>
 </plugin>
