--- a/plugin.xml
+++ b/plugin.xml
@@ -12,6 +12,7 @@
     <clobbers target="window.gattserver" />
   </js-module>
   <platform name="android">
+    <dependency id="com.sensiblesolutions.androidsupportv4" />
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="GattServerPlugin">
         <param name="android-package" value="com.sensiblesolutions.gattserver.GattServerPlugin" />
