--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.44">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.45">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -24,6 +24,8 @@
       <uses-permission android:name="android.permission.BLUETOOTH"/>
       <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
       <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+      <uses-permission android:name="android.permission.VIBRATE"/>
+	    <uses-feature android:name="android.hardware.vibrate" android:required="false"/>
     </config-file>
   </platform>
   <platform name="ios">
