--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,7 @@
     <config-file target="config.xml" parent="/*">
       <feature name="GattServerPlugin">
         <param name="ios-package" value="GattServerPlugin" />
+        <param name="onload" value="true" />
       </feature>
     </config-file>
     <config-file target="*-Info.plist" parent="UIBackgroundModes">
