--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.62">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.63">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -11,6 +11,7 @@
   <js-module src="www/gattserver.js" name="BluetoothLeGattServer">
     <clobbers target="window.gattserver" />
   </js-module>
+  <asset src="www/res" target="res" />
   <platform name="android">
     <!--<dependency id="com.sensiblesolutions.androidsupportv4" />-->
     <config-file target="res/xml/config.xml" parent="/*">
@@ -42,6 +43,7 @@
     </config-file>
     <header-file src="src/ios/GattServerPlugin.h" />
     <source-file src="src/ios/GattServerPlugin.m" />
+    <resource-file src="www/res/sounds/alarm.mp3" target="Resources/alarm.mp3" />
     <framework src="CoreBluetooth.framework" />
   </platform>
   <info>This plugin only adds Bluetooth LE GATT server with Immediate Alerts service added to your cordova app. To use your cordova app also as a GATT client, you need to use a 3rd party plugin for that</info>
