--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.72">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.73">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -39,6 +39,11 @@
     <config-file target="*-Info.plist" parent="UIBackgroundModes">
       <array>
         <string>bluetooth-central</string>
+      </array>
+    </config-file>
+    <config-file target="*-Info.plist" parent="UIBackgroundModes">
+      <array>
+        <string>bluetooth-peripheral</string>
       </array>
     </config-file>
     <header-file src="src/ios/GattServerPlugin.h" />
