--- a/plugin.xml
+++ b/plugin.xml
@@ -22,11 +22,13 @@
     <lib-file src="libs/android/android-support-v4.jar" />
     <source-file src="src/android/GattServerPlugin.java" target-dir="src/com/sensiblesolutions/gattserver" />
     <config-file target="AndroidManifest.xml" parent="/manifest">
-      <uses-permission android:name="android.permission.BLUETOOTH"/>
-      <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-      <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
-      <uses-permission android:name="android.permission.VIBRATE"/>
-	    <uses-feature android:name="android.hardware.vibrate" android:required="false"/>
+      	<uses-permission android:name="android.permission.BLUETOOTH"/>
+      	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+      	<uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+      	<uses-permission android:name="android.permission.VIBRATE"/>
+	<uses-feature android:name="android.hardware.vibrate" android:required="false"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-feature android:name="android.hardware.location.network" android:required="true"/>
     </config-file>
   </platform>
   <platform name="ios">
