--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.119">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.sensiblesolutions.gattserver" version="0.1.120">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -19,7 +19,8 @@
         <param name="android-package" value="com.sensiblesolutions.gattserver.GattServerPlugin" />
       </feature>
     </config-file>
-    <lib-file src="libs/android/android-support-v4.jar" />
+    <framework src="com.android.support:support-v4:+" />		<!-- Test instead of using lib file below -->
+    <!-- <lib-file src="libs/android/android-support-v4.jar" /> -->
     <source-file src="src/android/GattServerPlugin.java" target-dir="src/com/sensiblesolutions/gattserver" />
     <config-file target="AndroidManifest.xml" parent="/manifest">
       	<uses-permission android:name="android.permission.BLUETOOTH"/>
