--- a/plugin.xml
+++ b/plugin.xml
@@ -46,7 +46,8 @@
     </config-file>
     <header-file src="src/ios/GattServerPlugin.h" />
     <source-file src="src/ios/GattServerPlugin.m" />
-    <resource-file src="www/res/sounds/alarm.mp3" target="Resources/alarm.mp3" />
+    <!-- <resource-file src="www/res/sounds/alarm.mp3" target="Resources/alarm.mp3" /> -->
+    <resource-file src="www/res/sounds/alarm.mp3" target="Resources/crash_short.mp3" />
     <framework src="CoreBluetooth.framework" />
   </platform>
   <info>This plugin only adds Bluetooth LE GATT server with Immediate Alerts service added to your cordova app. To use your cordova app also as a GATT client, you need to use a 3rd party plugin for that</info>
