--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
     <framework src="com.android.support:support-v4:+" />		<!-- Test instead of using lib file below -->
     <!-- <lib-file src="libs/android/android-support-v4.jar" /> -->
     <source-file src="src/android/GattServerPlugin.java" target-dir="src/com/sensiblesolutions/gattserver" />
+    <source-file src="src/android/SensesoftMiniService.java" target-dir="src/com/sensiblesolutions/gattserver" />
     <config-file target="AndroidManifest.xml" parent="/manifest">
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
       	<uses-permission android:name="android.permission.BLUETOOTH"/>
@@ -31,6 +32,9 @@
 	<uses-feature android:name="android.hardware.vibrate" android:required="false"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-feature android:name="android.hardware.location.network" android:required="true"/>
+    </config-file>
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+	    <service android:name="com.sensiblesolutions.gattserver.SensesoftMiniService" />
     </config-file>
     <resource-file src="www/res/sounds/alarm.mp3" target="res/raw/alarm.mp3" /> -->
     <resource-file src="www/res/sounds/crash_short.mp3" target="res/raw/crash_short.mp3" />
