--- a/plugin.xml
+++ b/plugin.xml
@@ -40,7 +40,10 @@
     <!--<resource-file src="www/res/sounds/alarm.mp3" target="res/raw/alarm.mp3" />
     <resource-file src="www/res/sounds/crash_short.mp3" target="res/raw/crash_short.mp3" /> -->
     <resource-file src="www/res/sounds/horn.wav" target="res/raw/horn.wav" />
-    <resource-file src="www/res/sounds/bells.wav" target="res/raw/bells.wav" />  
+    <resource-file src="www/res/sounds/bells.wav" target="res/raw/bells.wav" />
+    <resource-file src="www/res/sounds/bells.wav" target="res/raw/car.wav" />
+    <resource-file src="www/res/sounds/bells.wav" target="res/raw/fire_truck.wav" />
+    <resource-file src="www/res/sounds/bells.wav" target="res/raw/space_ship.wav" />  
     <resource-file src="www/res/icons/notification_icon-mdpi.png" target="res/drawable-mdpi/notification_alarm_icon.png" />
     <resource-file src="www/res/icons/notification_icon-hdpi.png" target="res/drawable-hdpi/notification_alarm_icon.png" />
     <resource-file src="www/res/icons/notification_icon-xhdpi.png" target="res/drawable-xhdpi/notification_alarm_icon.png" />
