--- a/plugin.xml
+++ b/plugin.xml
@@ -84,6 +84,7 @@
     <resource-file src="www/res/sounds/car.wav" target="Resources/car.wav" />
     <resource-file src="www/res/sounds/fire_truck.wav" target="Resources/fire_truck.wav" />
     <resource-file src="www/res/sounds/space_ship.wav" target="Resources/space_ship.wav" />
+    <resource-file src="www/res/sounds/sensesoft_notification.wav" target="Resources/sensesoft_notification.wav" />
     <framework src="CoreBluetooth.framework" />
   </platform>
   <info>This plugin only adds Bluetooth LE GATT server with Immediate Alerts service added to your cordova app. To use your cordova app also as a GATT client, you need to use a 3rd party plugin for that</info>
